YURent Login Modal

--- a/YURent/Views/Home/Index.cshtml
+++ b/YURent/Views/Home/Index.cshtml
@@ -3,5 +3,25 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Home</h1>
+    <div class="container">
+        <h1 class="orange pt-220">Aluga tudo o que quiseres</h1>
+        <p>Alugar é 90% mais barato do que comprar</p>
+        <img src="~/images/drone.svg" id="imagem-inicio" />
 
+        <form class="card card-sm">
+            <div class="card-body row no-gutters align-items-center">
+                <div class="col-auto">
+                    <i class="fas fa-search h4 text-body"></i>
+                </div>
+                <!--end of col-->
+                <div class="col">
+                    <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
+                </div>
+                <!--end of col-->
+                <div class="col-auto">
+                    <button class="btn btn-lg btn-orange text-white" type="submit">Procurar</button>
+                </div>
+                <!--end of col-->
+            </div>
+        </form>
+    </div>
