--- a/YURent/wwwroot/css/main.css
+++ b/YURent/wwwroot/css/main.css
@@ -1,7 +1,121 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css?family=Roboto');
 
+body{
+	font-family: 'Roboto', sans-serif;
 }
 
-.btn-outline-dark:hover{
-    color: white;
+/* #region Classes Uteis*/
+.orange {
+    color: rgb(244, 143, 81);
 }
+
+.bg-orange {
+    background-color: rgb(244, 143, 81);
+}
+
+.btn-orange {
+    background-color: rgb(244, 143, 81);
+}
+
+.btn-orange:hover {
+    color: black;
+    background-color: rgb(255, 97, 0);
+    border-color: rgb(255, 97, 0);
+}
+.dropdown-item ::after {
+    background-color: rgb(255, 97, 0);
+}
+/* #endregion*/
+/* #region Modal */
+.modal-login {		
+	color: #636363;
+	width: 350px;
+}
+.modal-login .modal-content {
+	padding: 20px;
+	border-radius: 5px;
+	border: none;
+}
+.modal-login .modal-header {
+	border-bottom: none;   
+	position: relative;
+	justify-content: center;
+}
+.modal-login h4 {
+	text-align: center;
+	font-size: 26px;
+	margin: 30px 0 -15px;
+}
+.modal-login .form-control:focus {
+	border-color: #70c5c0;
+}
+.modal-login .form-control, .modal-login .btn {
+	min-height: 40px;
+	border-radius: 3px; 
+}
+.modal-login .close {
+    position: absolute;
+	top: -5px;
+	right: -5px;
+}	
+.modal-login .modal-footer {
+	background: #ecf0f1;
+	border-color: #dee4e7;
+	text-align: center;
+    justify-content: center;
+	margin: 0 -20px -20px;
+	border-radius: 5px;
+	font-size: 13px;
+	}
+.modal-login .modal-footer a {
+	color: #999;
+}		
+.modal-login.modal-dialog {
+	margin-top: 80px;
+}
+.modal-login .btn {
+	color: #fff;
+    border-radius: 4px;
+	background-color: rgb(244, 143, 81);
+	text-decoration: none;
+	transition: all 0.4s;
+    line-height: normal;
+    border: none;
+}
+.modal-login .btn:hover, .modal-login .btn:focus {
+    color: black;
+    background-color: rgb(255, 97, 0);
+    border-color: rgb(255, 97, 0);
+}
+/* #endregion */
+/*#region Inicio*/
+#imagem-inicio {
+    position: absolute;
+    right: 0px;
+    top: 127px;
+    width: 800px;
+    z-index: -1;
+}
+
+.pt-220{
+    padding-top:220px;
+}
+
+.navbar{
+    padding-right: 10%;
+    padding-left: 10%;
+}
+
+/*#region Search*/
+.form-control-borderless {
+    border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
+
+/*#endregion*/
+/*#endregion*/
