--- a/YURent/Views/Shared/_Layout.cshtml
+++ b/YURent/Views/Shared/_Layout.cshtml
@@ -9,16 +9,21 @@
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <!-- Bootstrap core CSS -->
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Meu CSS -->
+    <link href="~/css/main.css" rel="stylesheet" />    
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Meu CSS -->
-    <link href="~/css/main.css" rel="stylesheet" />
     <!-- Favicon -->
     <link rel="icon" type="image/ico" href="~/images/favicon.ico">
 
 </head>
 <body>
+
+    @*Cena do Facebook*@
+
+
+
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top text-right">
         <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img width="70" height="50" src="~/images/logo.png" /></a>
@@ -48,7 +53,7 @@
                     <a href="#login" class="btn btn-orange text-white" data-toggle="modal">Entrar</a>
                 </li>
                 <li class="nav-item ml-2">
-                    <a href="#register" class="btn btn-orange text-white">Registar</a>
+                    <a href="#register" class="btn btn-orange text-white" data-toggle="modal">Registar</a>
                 </li>
 
             </ul>
@@ -56,6 +61,8 @@
     </nav>
 
     <!-- Modal Login -->
+
+
     <div id="login" class="modal fade">
         <div class="modal-dialog modal-login">
             <div class="modal-content">
@@ -65,15 +72,25 @@
                 </div>
                 <div class="modal-body">
                     <form asp-action="login" method="post">
-                        <div class="form-group">
-                            <input type="email" class="form-control" name="email" placeholder="Email" required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-block btn-orange">Login</button>
-                        </div>
+                        <a href="#" class="btn btn-block" id="fb">
+                            <i class="fab fa-facebook fa-fw"></i>Entrar com Facebook
+                        </a>
+
+                        <a href="#" class="btn btn-block">
+                            <i class="fab fa-google fa-fw"></i> Entrar com Gmail
+                          </a>
+
+
+                            <br />
+                            <div class="form-group">
+                                <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-block btn-orange">Login</button>
+                            </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -83,6 +100,36 @@
         </div>
     </div>
 
+    <!-- Modal Registar -->
+    <div id="register" class="modal fade">
+        <div class="modal-dialog modal-login">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Registar</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form asp-action="login" method="post">
+                        <div class="form-group">
+                            <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-block btn-orange">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div>
         @RenderBody()
     </div>
@@ -90,8 +137,44 @@
 
 
 
-    <footer>
+    <footer class="align-self-center fixed-bottom text-white">
+        <div class="row">
+            <div class="col-md-6">
+
+            </div>
+            <div class="col-md-2">
+                <ul class="navbar-nav">
+                    <li class="nav-item font-weight-bold">Link Uteis</li>
+                    <li class="nav-item">Inicio</li>
+                    <li class="nav-item">Procurar Produtos</li>
+                    <li class="nav-item">Garantia</li>
+                    <li class="nav-item">Mapa do site</li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul class="navbar-nav">
+                    <li class="nav-item font-weight-bold">Precisas de Ajuda?</li>
+                    <li class="nav-item">FAQ</li>
+                    <li class="nav-item">Termos</li>
+                    <li class="nav-item">Privacidade</li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <ul class="navbar-nav">
+                    <li class="nav-item font-weight-bold">Contatos</li>
+                    <li class="nav-item fab fa-instagram sociais"></li>
+                    <li class="nav-item fab fa-facebook-square sociais"></li>
+                    <li class="nav-item far fa-envelope sociais"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row text-center pt-5">
+            <div class="col-md-12">
+                <p class="copyright">Copyright &copy; YURent @DateTime.Now.Year</p>
+            </div>
+        </div>
     </footer>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
