--- a/YURent/wwwroot/css/main.css
+++ b/YURent/wwwroot/css/main.css
@@ -4,6 +4,12 @@ body{
 	font-family: 'Roboto', sans-serif;
 }
 
+footer {
+    background-image: url('../images/footer.png');
+    background-size: cover;
+    padding-top: 100px;
+}
+
 /* #region Classes Uteis*/
 .orange {
     color: rgb(244, 143, 81);
@@ -73,6 +79,7 @@ body{
 .modal-login.modal-dialog {
 	margin-top: 80px;
 }
+
 .modal-login .btn {
 	color: #fff;
     border-radius: 4px;
@@ -87,6 +94,7 @@ body{
     background-color: rgb(255, 97, 0);
     border-color: rgb(255, 97, 0);
 }
+
 /* #endregion */
 /*#region Inicio*/
 #imagem-inicio {
@@ -117,5 +125,31 @@ body{
     box-shadow: none;
 }
 
+
 /*#endregion*/
 /*#endregion*/
+
+#fb {
+    background-color: #3B5998;
+    color: white;
+}
+
+#fb:hover {
+    background-color: #5775b4;
+    color: white;
+}
+
+#google {
+    background-color: #55ACEE;
+    color: white;
+}       
+
+
+#google:hover {
+    background-color: #dd4b39;
+    color: white;
+}
+
+.sociais{
+    font-size: 30px;
+}
