--- a/YURent/Views/Shared/_Layout.cshtml
+++ b/YURent/Views/Shared/_Layout.cshtml
@@ -19,11 +19,7 @@
 
 </head>
 <body>
-
-    @*Cena do Facebook*@
-
-
-
+    @* INÍCIO *@
 
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top text-right">
         <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img width="70" height="50" src="~/images/logo.png" /></a>
@@ -34,19 +30,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" asp-controller="Home" asp-action="Index">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Anunciar</a>
+                    <a class="nav-link" asp-controller="Home" asp-action="Index">Anunciar</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Mais
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">FAQ</a>
-                        <a class="dropdown-item" href="#">Garantia</a>
-                        <a class="dropdown-item" href="#">Como Funciona</a>
+                        <a class="dropdown-item" asp-controller="Home" asp-action="Index">FAQ</a>
+                        <a class="dropdown-item" asp-controller="Home" asp-action="Index">Garantia</a>
+                        <a class="dropdown-item" asp-controller="Home" asp-action="Index">Como Funciona</a>
                     </div>
                 </li>
                 <li class="nav-item ml-2">
@@ -78,19 +74,19 @@
 
                         <a href="#" class="btn btn-block">
                             <i class="fab fa-google fa-fw"></i> Entrar com Gmail
-                          </a>
+                        </a>
 
 
-                            <br />
-                            <div class="form-group">
-                                <input type="email" class="form-control" name="email" placeholder="Email" required="required">
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" name="password" placeholder="Password" required="required">
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-block btn-orange">Login</button>
-                            </div>
+                        <br />
+                        <div class="form-group">
+                            <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-block btn-orange">Login</button>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -134,46 +130,9 @@
         @RenderBody()
     </div>
 
+    <partial />
 
-
-
-    <footer class="align-self-center fixed-bottom text-white">
-        <div class="row">
-            <div class="col-md-6">
-
-            </div>
-            <div class="col-md-2">
-                <ul class="navbar-nav">
-                    <li class="nav-item font-weight-bold">Link Uteis</li>
-                    <li class="nav-item">Inicio</li>
-                    <li class="nav-item">Procurar Produtos</li>
-                    <li class="nav-item">Garantia</li>
-                    <li class="nav-item">Mapa do site</li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <ul class="navbar-nav">
-                    <li class="nav-item font-weight-bold">Precisas de Ajuda?</li>
-                    <li class="nav-item">FAQ</li>
-                    <li class="nav-item">Termos</li>
-                    <li class="nav-item">Privacidade</li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <ul class="navbar-nav">
-                    <li class="nav-item font-weight-bold">Contatos</li>
-                    <li class="nav-item fab fa-instagram sociais"></li>
-                    <li class="nav-item fab fa-facebook-square sociais"></li>
-                    <li class="nav-item far fa-envelope sociais"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row text-center pt-5">
-            <div class="col-md-12">
-                <p class="copyright">Copyright &copy; YURent @DateTime.Now.Year</p>
-            </div>
-        </div>
-    </footer>
+    @await Html.PartialAsync("_Footer")
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
