--- a/YURent/Views/Home/Index.cshtml
+++ b/YURent/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Inicio";
 }
 
 <div class="container" id="inicio-pesquisa">
@@ -25,7 +25,7 @@
 </div>
 <div class="container">
     <div class="d-flex">
-        <div class="card col-md-2 m-2 categorias">
+        <div class="card col-md-2 m-2 categorias shine">
             <a asp-controller="" asp-action="">
                 <img class="card-img-top" src="~/images/Categorias/cameras.jpg" />
                 <div class="card-body">
@@ -72,6 +72,26 @@
                     <h5 class="card-title text-center text-black-50">Instrumentos</h5>
                 </div>
             </a>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-6 pt-220">
+            <h1>Ganha dinheiro com as tuas coisas</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+        </div>
+        <div class="col-md-6" id="porquinho">
+            <img src="~/images/Porquinho.png" />
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-md-6">
+            <img src="~/images/Desconto.png" id="desconto"/>
+        </div>
+        <div class="col-md-6 pt-100">
+            <h1>Alugar é 90% mais barato do que comprar</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
         </div>
     </div>
 </div>
