--- a/YURent/wwwroot/css/main.css
+++ b/YURent/wwwroot/css/main.css
@@ -15,7 +15,7 @@ footer {
     padding-top: 10vh;
     width:100%;
     margin: auto;
-
+    margin-top: 100px;
 }
 
 /* #region Classes Uteis*/
@@ -144,6 +144,16 @@ footer {
     text-decoration: none;
 }
 
+#desconto{
+    width: 100%;
+}
+#porquinho{
+    width: 100%;
+}
+
+.pt-100{
+    padding-top: 100px;
+}
 /*#region Search*/
 .form-control-borderless {
     border: none;
