--- a/YURent/Views/Home/Index.cshtml
+++ b/YURent/Views/Home/Index.cshtml
@@ -21,11 +21,10 @@
             </div>
         </div>
     </form>
-
 </div>
 <div class="container">
     <div class="d-flex">
-        <div class="card col-md-2 m-2 categorias shine">
+        <div class="card col-md-2 m-2 categorias">
             <a asp-controller="" asp-action="">
                 <img class="card-img-top" src="~/images/Categorias/cameras.jpg" />
                 <div class="card-body">
@@ -35,7 +34,7 @@
         </div>
         <div class="card col-md-2 m-2 categorias">
             <a asp-controller="" asp-action="">
-                <img class="card-img-top" src="~/images/Categorias/drones.jpg" />
+                <img class="card-img-top test-shine" src="~/images/Categorias/drones.jpg" />
                 <div class="card-body">
                     <h5 class="card-title text-center text-black-50">Drones</h5>
                 </div>
