--- a/YURent/Views/Shared/_Footer.cshtml
+++ b/YURent/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="align-self-center text-white">
-    <div class="row">
+    <div class="row d-flex">
         <div class="col-md-6 col-sm-1"></div>
         <div class="col-md-2 col-sm-4">
             <ul class="navbar-nav">
