--- a/YURent/wwwroot/css/main.css
+++ b/YURent/wwwroot/css/main.css
@@ -16,6 +16,16 @@ footer {
     width:100%;
     margin: auto;
     margin-top: 100px;
+    padding-left: 30px;
+}
+
+.avatar{
+    border-radius: 150px;
+    width: 100px;
+}
+.avatar-perfil {
+    border-radius: 150px;
+    width: 200px;
 }
 
 /* #region Classes Uteis*/
@@ -29,12 +39,11 @@ footer {
 
 .btn-orange {
     background-color: rgb(244, 143, 81);
+    border: none;
 }
-
 .btn-orange:hover {
-    color: black;
-    background-color: rgb(255, 97, 0);
-    border-color: rgb(255, 97, 0);
+    background-color: rgba(244, 143, 81, 0.83);
+    border: none;
 }
 .dropdown-item ::after {
     background-color: rgb(255, 97, 0);
@@ -168,7 +177,23 @@ footer {
 
 /*#endregion*/
 /*#endregion*/
+/* #region Perfil*/
+.star img{
+    width: 120px;
+}
+.star{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.pr-300{
+    padding-right: 300px;
+}
 
+.fa-check-circle{
+    color: limegreen;
+}
+/* #endregion */
+/* #region Login Facebook/Google */
 #fb {
     background-color: #3B5998;
     color: white;
@@ -180,19 +205,22 @@ footer {
 }
 
 #google {
-    background-color: #55ACEE;
-    color: white;
-}       
-
-
-#google:hover {
-    background-color: #dd4b39;
+    background-color: rgb(222,82,70);
     color: white;
 }
 
+#google:hover {
+    background-color: rgb(230, 111, 101);
+    color: white;
+}
+.btn-block {
+    text-align: center;
+    padding: 10px;
+}
 .sociais{
     font-size: 30px;
 }
+/* #endregion */
 
 footer a{
     color: white;
