--- a/YURent/Views/Home/Index.cshtml
+++ b/YURent/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
     </form>
 </div>
 <div class="container">
-    <div class="d-flex">
+    <div class="flex">
         <div class="card col-md-2 m-2 categorias">
             <a asp-controller="" asp-action="">
                 <img class="card-img-top" src="~/images/Categorias/cameras.jpg" />
