Database SQL Test

--- a/YURent/Views/Home/Perfil.cshtml
+++ b/YURent/Views/Home/Perfil.cshtml
@@ -4,16 +4,16 @@
 
 @* CONTAINER COM FOTO DE PERFIL / DESCRIÇAO / RATING / INFORMACAO VERIFICADA *@
 <div class="container" id="desc-perfil">
-    <div class="row">
+    <div class="flex">
         <div class="col-md-3 col-sm-12">
             <img class="avatar-perfil" src="~/images/avatar.png" />
         </div>
-        <div class="col-md-9 col-sm-12 ml-md-4">
+        <div class="col-md-9 col-sm-12 pl-sm-5">
             <div class="d-flex">
                 <h3 class="margin"><i class="fas fa-check-circle margin"></i>Serafim</h3>
                 <a class="btn btn-orange text-white" id="botaomensagem" href="">Enviar Mensagem</a>
             </div>
-            <div class="flex">
+            <div class="d-flex">
                 <p class="star margin pt-2"><img src="~/images/Stars/5-star.png" /></p>
                 <p class="pt-2">Entrou em Maio 2019</p>
             </div>
@@ -35,30 +35,30 @@
     <div class="flex">
         @* FUTURAMENTE VAI SER TROCADO POR UM FOREACH QUE IRÁ APRESENTAR AS 3 REVIEWS MAIS RECENTES *@
         <div class="col-md-4 avaliacao d-flex mr-2">
-            <div class="col-md-3">
+            <div class="col-md-3 pr-0">
                 <img id="avatar-avaliacao" src="~/images/avatar.png" />
             </div>
-            <div class="col-md-9 pl-5">
+            <div class="col-md-9 pl-sm-5">
                 <img id="star-avaliacao" src="~/images/Stars/5-star.png" />
                 <h6>Roberto Flores</h6>
                 <p>24 Abril 1974</p>
             </div>
         </div>
         <div class="col-md-4 avaliacao d-flex mr-2">
-            <div class="col-md-3">
+            <div class="col-md-3 pr-0">
                 <img id="avatar-avaliacao" src="~/images/avatar.png" />
             </div>
-            <div class="col-md-9 pl-5">
+            <div class="col-md-9 pl-sm-5">
                 <img id="star-avaliacao" src="~/images/Stars/5-star.png" />
                 <h6>Roberto Flores</h6>
                 <p>24 Abril 1974</p>
             </div>
         </div>
         <div class="col-md-4 avaliacao d-flex">
-            <div class="col-md-3">
+            <div class="col-md-3 pr-0">
                 <img id="avatar-avaliacao" src="~/images/avatar.png" />
             </div>
-            <div class="col-md-9 pl-5">
+            <div class="col-md-9 pl-sm-5">
                 <img id="star-avaliacao" src="~/images/Stars/5-star.png" />
                 <h6>Roberto Flores</h6>
                 <p>24 Abril 1974</p>
