--- a/YURent/Views/Shared/_Layout.cshtml
+++ b/YURent/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
 <body>
     @* INÍCIO *@
 
-    @*@await Html.PartialAsync("_LoggedIn")*@
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top text-right">
+    @await Html.PartialAsync("_LoggedIn")
+    @*<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top text-right">
         <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img width="70" height="50" src="~/images/logo.png" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
 
             </ul>
         </div>
-    </nav>
+    </nav>*@
 
     <!-- Modal Login -->
 
