--- a/YURent/Views/Painel/Index.cshtml
+++ b/YURent/Views/Painel/Index.cshtml
@@ -3,6 +3,77 @@
     ViewData["Title"] = "Painel";
 }
 
-<div class="card">
+<div class="container-fluid container-md mt-5">
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+            <div class="text-center shadow"> 
+                @* Info Utilizador *@
+                <img id="avatar-painel" src="~/images/avatar.png" />
+                <p class=" text-center mt-2">Username</p>
+                <hr />
+                <p>Email: usermail@gmail.com</p>
+                <p>Cidade: Almada</p>
+                <p class="">Telefone: 123456789</p>
+                <img id="star-painel" src="~/images/Stars/5-star.png" />
+            </div>
+            <div class="shadow correio">
+                @* Mensagens *@
+                <div class="d-flex justify-content-between correio-header">
+                    <h6>Correio</h6>
+                    <h6 class="link">Ver Tudo</h6>
+                </div>
+                <div class="mensagem-naovista d-flex">
+                    <img class="avatar" src="~/images/avatar.png" />
+                    <div class="ml-2">
+                        <p class="m-0">Username</p>
+                        <p class="m-0">Olá, blablabla</p>
+                    </div>
+                    <p>10m</p>
+                </div>
+                <div class="mensagem-vista d-flex">
+                    <img class="avatar" src="~/images/avatar.png" />
+                    <div class="ml-2">
+                        <p class="m-0">Username</p>
+                        <p class="m-0">Olá, blablabla</p>
+                    </div>
+                    <p>10h</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-8 col-lg-9 col-xl-10">
+            <div class="shadow p-2 pl-4">
+                <h3 class="font-weight-normal">Pendente Confirmação (1)</h3>
+            </div>
+            <div class="shadow d-flex mt-3 mb-5 justify-content-between align-items-center">
+                <img class="imagem-estado" src="~/images/logo.png" />
+                <p class="m-0">Carlos Castro</p>
+                <div class="m-2">
+                    <p class="m-0">Preço</p>
+                    <p class="m-0">20€</p>
+                </div>
+                <div class="m-2">
+                    <p class="m-0">Data Inicio</p>
+                    <p class="m-0">01/01/20</p>
+                </div>
+                <div class="m-2">
+                    <p class="m-0">Data Fim</p>
+                    <p class="m-0">12/12/20</p>
+                </div>
+                <div class="d-flex mr-2">
+                    <a href="#"><img class="imagem-aceitar" src="~/images/aceitar.png" /></a>
+                    <a href="#"><img class="imagem-aceitar" src="~/images/recusar.png" /></a>
+                </div>
 
+
+            </div>
+
+            <div class="shadow p-2 pl-4">
+                <h3 class="font-weight-normal">A decorrer (1)</h3>
+            </div>
+
+            <div class="shadow p-2 pl-4">
+                <h3 class="font-weight-normal">Histórico (1)</h3>
+            </div>
+        </div>
+    </div>
 </div>
